--- a/docs/index.css
+++ b/docs/index.css
@@ -16,11 +16,11 @@ body {
 }
 
 .two {
-  background-color:BlueViolet ;
+  background-color:blueviolet ;
 }
 
 .three {
-  background-color:HotPink ;
+  background-color:hotpink ;
 }
 
 .four {
