--- a/docs/index.css
+++ b/docs/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 .one {
-  background-image: url(https://picsum.photos/800/800/?gravity=center)
+  background-image: url(http://gist.asciidoctor.org/?github-mnke-j%2Fmy_html%2F%2FGdynia%2Findex1.html)
 }
 
 .two {
