--- a/docs/index.css
+++ b/docs/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 .one {
-  background-image: url(http://gist.asciidoctor.org/?github-mnke-j%2Fmy_html%2F%2FGdynia%2Findex1.html)
+  background-image: url(ilovegdynialogo.png)
 }
 
 .two {
