--- a/docs/index.css
+++ b/docs/index.css
@@ -5,8 +5,8 @@ body {
 .main {
   display: grid;
   grid-gap: 5px;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(6, 1fr);
   height: 100vh;
   width: 100vw;
 }
