--- a/docs/index.css
+++ b/docs/index.css
@@ -15,6 +15,8 @@ body {
   background-image: url(ilovegdynialogo.png)
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
+  height: 60vh;
+  width: 60vw;
 }
 
 .two {
