--- a/docs/index.css
+++ b/docs/index.css
@@ -12,18 +12,18 @@ body {
 }
 
 .one {
-  background-image: url(ilovegdynialogo.png)
+  background-image: url(C:\Users\Monika\PSPI\my_html\Gdynia)
     grid-area: 1/1/4/4;
     
 }
 
 .two {
-  background-color:blueviolet ;
+  background-color:blueviolet;
     grid-area:1/4/5/6;
 }
 
 .three {
-  background-color:hotpink ;
+  background-color:hotpink;
     grid-area:4/1/7/3;
 }
 
@@ -31,8 +31,9 @@ body {
   background-color:aquamarine;
     grid-area:5/3/7/6;
 }
+
 .five{
-  background-color:hotpink ;
+  background-color:lime;
     grid-area:4/3/5/4;
 }
 
