--- a/docs/index.css
+++ b/docs/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 .one {
-  background-image: url(https://gogdynia.pl/wp-content/uploads/2015/08/ilovegdynialogo-1024x424.png)
+  background-image: url(//gogdynia.pl/1024/424)
     grid-area: 1/1/4/4;
     
 }
