--- a/docs/index.css
+++ b/docs/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 .one {
-  background-image: url(//picsum.photos/g/200/300);
+  background-image: url(//picsum.photos/200/300);
     grid-area: 1/1/4/4;
     
 }
