--- a/docs/index.css
+++ b/docs/index.css
@@ -18,7 +18,7 @@ body {
 }
 
 .two {
-  background-color:blueviolet;
+  background-image: url(//picsum.photos/200/300);
     grid-area:1/4/5/6;
 }
 
@@ -33,7 +33,7 @@ body {
 }
 
 .five {
-  background-color:url(//picsum.photos/200/300);
+  background-image: url(//picsum.photos/200/300);
     grid-area:4/3/5/4;
 }
 
