--- a/docs/index.css
+++ b/docs/index.css
@@ -18,7 +18,7 @@ body {
 }
 
 .two {
-  background-image: url(//picsum.photos/200/300);
+  background-image: url(//unsplash.it/800/600);
     grid-area:1/4/5/6;
 }
 
