--- a/docs/index.css
+++ b/docs/index.css
@@ -1,7 +1,6 @@
 body {
   font-size: 1.5em;
 }
-
 .main {
   display: grid;
   grid-gap: 5px;
@@ -10,44 +9,40 @@ body {
   height: 100vh;
   width: 100vw;
 }
-
+#link{
+  color:black;
+  text-shadow:2px 2px grey;
+  border-radius:15px;
 .one {
+  grid-area: 1/1/4/4;
   background-image: url(//unsplash.it/800/600);
   background-color: $black;
   background-blend-mode:multiplay;
   background:$light-grey;
-  background-size: cover;
-    grid-area: 1/1/4/4;
-    
+  background-size: cover;      
 }
-
 .two {
+  grid-area:1/4/5/6;
   background-image: url(//unsplash.it/800/600);
-    grid-area:1/4/5/6;
 }
-
 .three {
-  background-color:hotpink;
-    grid-area:4/1/7/3;
+  grid-area:4/1/7/3;
+  background-color:hotpink; 
 }
-
 .four {
+  grid-area:5/3/7/6;
   background-color:aquamarine;
-    grid-area:5/3/7/6;
 }
-
 .five {
+  grid-area:4/3/5/4;
   background-image: url(//picsum.photos/200/300);
-    grid-area:4/3/5/4;
 }
-
 .main > div {
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
 }
-
 @media screen and (max-width: 600px) {
   .main {
     display: block;
