--- a/docs/index.css
+++ b/docs/index.css
@@ -11,7 +11,7 @@ body {
 }
 .one {
   grid-area: 1/1/4/4;
-  background-image: url(https://cdn.pixabay.com/photo/2017/08/02/19/19/sailing-ship-2573015__480.jpg);
+  background-image: url(https://images.unsplash.com/photo-1513738883496-ab16da46fbe0?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cb7158d294f59cf73b854a6165a8b8c8&auto=format&fit=crop&w=600&q=60);
     background-color: $black;
     background-blend-mode:multiplay;
     background:$light-grey;
