--- a/docs/index.css
+++ b/docs/index.css
@@ -27,7 +27,7 @@ body {
 }
 .four {
   grid-area:5/3/7/6;
-  background-color:aquamarine;
+  background-image: url(https://cdn.pixabay.com/photo/2016/09/22/10/44/banner-1686943__480.jpg);
 }
 .five {
   grid-area:4/3/5/4;
