--- a/docs/index.css
+++ b/docs/index.css
@@ -11,7 +11,7 @@ body {
 }
 .one {
   grid-area: 1/1/4/4;
-  background-image: url(https://images.unsplash.com/photo-1507442139473-042ef20b25c6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=afc049bb20478b1cc700d908ce3121a9&auto=format&fit=crop&w=600&q=60);
+  background-image: url(https://cdn.pixabay.com/photo/2018/03/13/11/26/time-3222267__480.jpg);
     background-color: $black;
     background-blend-mode:multiplay;
     background:$light-grey;
