--- a/docs/index.css
+++ b/docs/index.css
@@ -11,7 +11,7 @@ body {
 }
 .one {
   grid-area: 1/1/4/4;
-  background-image: url(https://cdn.pixabay.com/photo/2016/11/03/19/14/hearts-1795849_1280.png);   
+  background-image: url(https://images.unsplash.com/photo-1510775750777-c6a9f669e051?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=65402aac0954341173e9cefb81fe35a5&auto=format&fit=crop&w=600&q=60);   
 }
 .two {
   grid-area:1/4/5/6;
