--- a/docs/index.css
+++ b/docs/index.css
@@ -23,7 +23,7 @@ body {
 }
 .four {
   grid-area:5/3/7/6;
-  background-image: url(https://cdn.pixabay.com/photo/2017/03/27/21/38/sunset-2180346__480.jpg);
+  background-image: url(https://images.unsplash.com/photo-1508881598441-324f3974994b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2aef1e2f3895c40e891654ae51f9c1e3&auto=format&fit=crop&w=600&q=60);
 }
 .five {
   grid-area:4/3/5/4;
