--- a/docs/index.css
+++ b/docs/index.css
@@ -10,11 +10,12 @@ body {
   width: 100vw;
 }
 .one {
-  grid-area: 1/1/4/4;
+   
+  /*grid-area: 1/1/4/4;
   background-image: url(https://images.unsplash.com/photo-1516054237813-0df813b7f496?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=72723608521964dda7bc64cdcdd85a29&auto=format&fit=crop&w=600&q=60);   
   background-size:cover;
   background-position: top left;
-  
+  */
 }
 .two {
   grid-area:1/4/5/6;
