--- a/docs/index.css
+++ b/docs/index.css
@@ -12,7 +12,7 @@ body {
 .one {
    
   grid-area: 1/1/4/4;
-  background-image: url(https://github.com/mnke-j/my_html/blob/master/Gdynia/ilovegdynialogo.png);   
+  background-image: url(https://github.com/mnke-j/my_html/blob/master/Gdynia/ilovegdynialogo.png?raw=true);   
   background-size:cover;
   background-position: top left;
 }
