--- a/docs/index.css
+++ b/docs/index.css
@@ -15,6 +15,8 @@ body {
   background-image: url(https://github.com/mnke-j/my_html/blob/master/Gdynia/ilovegdynialogo.png?raw=true);   
   background-size:contain;
   background-position: top left;
+  justify-content: bottom;
+  text-align: bottom;
 }
 .two {
   grid-area:1/4/5/6;
