--- a/docs/index.css
+++ b/docs/index.css
@@ -15,8 +15,11 @@ body {
   background-image: url(https://github.com/mnke-j/my_html/blob/master/Gdynia/ilovegdynialogo.png?raw=true);   
   background-size:contain;
   background-position: top left;
-  padding: 150px;
-}
+  .link{
+ padding: 250px; 
+
+  }}
+
 .two {
   grid-area:1/4/5/6;
   background-image: url(https://images.unsplash.com/photo-1515767079362-106c32de23f2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d5963bbd9dbce9d7d15174fbb7caf763&auto=format&fit=crop&w=600&q=60);
