--- a/docs/index.css
+++ b/docs/index.css
@@ -15,10 +15,12 @@ body {
   background-image: url(https://github.com/mnke-j/my_html/blob/master/Gdynia/ilovegdynialogo.png?raw=true);   
   background-size:contain;
   background-position: top left;
-  .link{
+  }
+
+.link{
  padding: 250px; 
 
-  }}
+  }
 
 .two {
   grid-area:1/4/5/6;
