--- a/docs/index.css
+++ b/docs/index.css
@@ -24,7 +24,7 @@ body {
 
 .two {
   grid-area:1/4/5/6;
-  background-image: url(https://images.unsplash.com/photo-1515767079362-106c32de23f2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d5963bbd9dbce9d7d15174fbb7caf763&auto=format&fit=crop&w=600&q=60);
+  background-image: url(http://g7.forsal.pl/p/_wspolne/pliki/1777000/1777567-gdynia.jpg);
 }
 .three {
   grid-area:4/1/7/3;
