--- a/docs/index.css
+++ b/docs/index.css
@@ -25,6 +25,8 @@ body {
 .two {
   grid-area:1/4/5/6;
   background-image: url(http://g7.forsal.pl/p/_wspolne/pliki/1777000/1777567-gdynia.jpg);
+  background-size:cover;
+  background-position: top left;
 }
 .three {
   grid-area:4/1/7/3;
@@ -36,7 +38,7 @@ body {
 }
 .five {
   grid-area:5/3/7/6;
-  background-image: url(https://images.unsplash.com/photo-1508881598441-324f3974994b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2aef1e2f3895c40e891654ae51f9c1e3&auto=format&fit=crop&w=600&q=60);
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTA00PZg53mtzdjONDayUv6DqWpMEoJ3UPlixtm7LsXq-3FIwCoMA);
   background-size:cover;
   background-position: top left;
 }
