--- a/docs/index.css
+++ b/docs/index.css
@@ -38,7 +38,7 @@ body {
 }
 .five {
   grid-area:5/3/7/6;
-  background-image: url(https://images.unsplash.com/photo-1510007552638-e1c0c4c67ee0?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=95ed13af4e929ecf4617003a8e056214&auto=format&fit=crop&w=600&q=60);
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSEx09Y3Gtw2u7klsPxx9_kzgomSUdAIx35_YhZpPTPcDU-iMt);
   background-size:cover;
   background-position: top left;
 }
