--- a/docs/index.css
+++ b/docs/index.css
@@ -31,7 +31,7 @@ body {
 .three {
   grid-area:4/1/7/3;
   background-image:url(https://images.unsplash.com/photo-1513738883496-ab16da46fbe0?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cb7158d294f59cf73b854a6165a8b8c8&auto=format&fit=crop&w=600&q=60); 
-  background-size:contain;
+  background-size:cover;
   background-position: top left;
 }
 .four {
@@ -41,7 +41,7 @@ body {
 .five {
   grid-area:5/3/7/6;
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSEx09Y3Gtw2u7klsPxx9_kzgomSUdAIx35_YhZpPTPcDU-iMt);
-  background-size:contain;
+  background-size:cover;
   background-position: top left;
 }
 
